--- a/Projeto Web - Pizzaria/Js/index.html
+++ b/Projeto Web - Pizzaria/Js/index.html
@@ -6,9 +6,17 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Projeto Web - Pizzaria</title>
 
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="/Projeto Web - Pizzaria/Css/pizzaWebSite.css">
+
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@100;200;400;500;700;800;900&display=swap" rel="stylesheet">
+
+    <link rel="stylesheet" href="https://unpkg.com/boxicons@latest/css/boxicons.min.css">
 </head>
 <body>
-    
+    <header>
+        <a href="#" class="logo" src=""
+    </header>    
 </body>
 </html>
