--- a/Projeto Web - Pizzaria/Js/index.html
+++ b/Projeto Web - Pizzaria/Js/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Projeto Web - Pizzaria</title>
+    <title>Pizzaria</title>
 
     <link rel="stylesheet" href="/Projeto Web - Pizzaria/Css/pizzaWebSite.css">
 
@@ -16,7 +16,19 @@
 </head>
 <body>
     <header>
-        <a href="#" class="logo" src=""
+        <a href="#" class="logo"><img src="/Projeto Web - Pizzaria/Images/logo.png" alt="logo"></a>
+        <ul class="navbar">
+            <li><a href="#home">Home</a></li>
+            <li><a href="#menu">Menu</a></li>
+            <li><a href="#contact">Contato</a></li>
+            <li><a href="#about">Sobre</a></li>
+        </ul>
+
+        <div class="h-icons">
+            <a href="#"><i class='bx bx-search'></i></a>
+            <a href="#"><i class='bx bx-cart' ></i></a>
+            <div class="bx bx-menu" id="menu-icon"></div>
+        </div>
     </header>    
 </body>
 </html>
