inicio corpo do site

--- a/Projeto Web - Pizzaria/Js/index.html
+++ b/Projeto Web - Pizzaria/Js/index.html
@@ -30,5 +30,17 @@
             <div class="bx bx-menu" id="menu-icon"></div>
         </div>
     </header>    
+
+    <section class="home" id="home">
+        <div class="home-text">
+            <h1> <span>Bem Vindo</span> ao incrível mundo da pizza</h1>
+            <p> aqui você encontra de pizzas veganas a pizzas inadimplentes, tá ligado <br> de fato, levamos a sério as massas</p>
+            <a href="#" class="btn"> Escolha a sua pizza</a>
+        </div>
+
+        <div>
+            <img src="/Projeto Web - Pizzaria/Images/home.png" alt="home">
+        </div>
+    </section>
 </body>
 </html>
