Corrigindo paths das images

--- a/Projeto Web - Pizzaria/index.html
+++ b/Projeto Web - Pizzaria/index.html
@@ -6,7 +6,7 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<title>Food website</title>
 
-	<link rel="stylesheet" href="/Projeto Web - Pizzaria/Css/pizzaWebSite.css">
+	<link rel="stylesheet" href="./Css/ Web - Pizzaria/Css/pizzaWebSite.css">
 
 	<link rel="stylesheet" href="https://unpkg.com/boxicons@latest/css/boxicons.min.css">
 
@@ -18,7 +18,7 @@
 <body>
 
 	<header>
-		<a href="#" class="logo"><img src="/Projeto Web - Pizzaria/Images/logo.png" alt="logo"></a>
+		<a href="#" class="logo"><img src="./Images/logo.png" alt="logo"></a>
 		<ul class="navbar">
 			<li><a href="#home">Home</a></li>
             <li><a href="#menu">Menu</a></li>
@@ -41,7 +41,7 @@
 			</div>
 
 			<div class="home-img">
-				<img src="/Projeto Web - Pizzaria/Images/home.png" alt="home">
+				<img src="./Images/home.png" alt="home">
 			</div>
 		</section>
 
@@ -54,7 +54,7 @@
 			<div class="container-box">
 				<div class="c-mainbox">
 					<div class="container-img">
-						<img src="/Projeto Web - Pizzaria/Images/b1.png" alt="box1">
+						<img src="./Images/b1.png" alt="box1">
 					</div>
 					<div class="container-text">
 						<p>Delicate Dough</p>
@@ -63,7 +63,7 @@
 
 				<div class="c-mainbox">
 					<div class="container-img">
-						<img src="/Projeto Web - Pizzaria/Images/b2.png" alt="box2">
+						<img src="./Images/b2.png" alt="box2">
 					</div>
 					<div class="container-text">
 						<p>Fresh Tomatoes</p>
@@ -72,7 +72,7 @@
 
 				<div class="c-mainbox">
 					<div class="container-img">
-						<img src="/Projeto Web - Pizzaria/Images/b3.png" alt="box3">
+						<img src="./Images/b3.png" alt="box3">
 					</div>
 					<div class="container-text">
 						<p>Queijo Suculento</p>
@@ -81,7 +81,7 @@
 
 				<div class="c-mainbox">
 					<div class="container-img">
-						<img src="/Projeto Web - Pizzaria/Images/b4.png" alt="box4">
+						<img src="./Images/b4.png" alt="box4">
 					</div>
 					<div class="container-text">
 						<p>Calabresita</p>
@@ -94,7 +94,7 @@
 	<!-- about section -->
 		<section class="about" id="about">
 			<div class="about-img">
-				<img src="/Projeto Web - Pizzaria/Images/a.png" alt="">
+				<img src="./Images/a.png" alt="">
 			</div>
 
 			<div class="about-text">
@@ -115,7 +115,7 @@
 
 			<div class="menu-content">
 				<div class="row">
-					<img src="/Projeto Web - Pizzaria/Images/m1.jpg" alt="main-product1">
+					<img src="./Images/m1.jpg" alt="main-product1">
 					<div class="menu-text">
 						<div class="menu-left">
 							<h4>Margarita</h4>
@@ -135,7 +135,7 @@
 				</div>
 
 				<div class="row">
-					<img src="/Projeto Web - Pizzaria/Images/m2.jpg" alt="main-product2">
+					<img src="./Images/m2.jpg" alt="main-product2">
 					<div class="menu-text">
 						<div class="menu-left">
 							<h4>Montanara</h4>
@@ -155,7 +155,7 @@
 				</div>
 
 				<div class="row">
-					<img src="/Projeto Web - Pizzaria/Images/m3.jpg" alt="main-product3">
+					<img src="./Images/m3.jpg" alt="main-product3">
 					<div class="menu-text">
 						<div class="menu-left">
 							<h4>Con Carne</h4>
@@ -175,7 +175,7 @@
 				</div>
 
 				<div class="row">
-					<img src="/Projeto Web - Pizzaria/Images/m4.jpg" alt="main-product4">
+					<img src="./Images/m4.jpg" alt="main-product4">
 					<div class="menu-text">
 						<div class="menu-left">
 							<h4>Pepperoni</h4>
@@ -247,9 +247,6 @@
 	<!-- custom scrollreveal link -->
 
 	<script src="https://unpkg.com/scrollreveal"></script>
-	
-	<!-- custom js link -->
-	<script type="text/javascript" src="js/Pizza website.js"></script>
 	
 </body>
 </html>
